--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,4 +1,4 @@
-@import 'node_modules\bootstrap-icons\font\bootstrap-icons.min.css';
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
